--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -247,7 +247,7 @@
 
   {% endblock %}
 
-  <script type="text/javascript" src="/dist/terrama2-webapp.js"></script>
+  <script type="text/javascript" src="/dist/terrama2-webapp.min.js"></script>
 
 </body>
 </html>
