creating the update screen

--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -303,7 +303,7 @@
           <div class="form-group">
             <div class="checkbox">
               <label style="font-weight: 700;">
-                <input type="checkbox" name="simplifiedReport" ng-model="ctrl.notifyOnRiskLevel" ng-true-value="true" ng-false-value="false"> <span ng-bind="i18n.__('Notify on risk level')"></span>
+                <input type="checkbox" name="notifyOnRiskLevel" ng-model="ctrl.notifyOnRiskLevel" ng-true-value="true" ng-false-value="false"> <span ng-bind="i18n.__('Notify on risk level')"></span>
               </label>
             </div>
           </div>
