Starting process analysis and views in list screen, to check if service is running

--- a/webapp/views/configuration/analysis_list.html
+++ b/webapp/views/configuration/analysis_list.html
@@ -17,6 +17,7 @@
   };
 
   var configuration = {
+    extra: {[extra|json|safe]},
     message: "{[ message ]}",
     projectId: "{[ activeProject.id ]}"
   };
