--- a/webapp/views/configuration/views.html
+++ b/webapp/views/configuration/views.html
@@ -10,6 +10,7 @@
 
 <script type="text/javascript">
   var configuration = {
+    extra: {[extra|json|safe]},
     message: "{[ message ]}"
   };
 </script>
