--- a/webapp/views/administration/service.html
+++ b/webapp/views/administration/service.html
@@ -126,7 +126,7 @@
                     <option value="1">{{ i18n.__('Collector') }}</option>
                     <option value="2">{{ i18n.__('Analysis') }}</option>
                     <option value="3">{{ i18n.__('View') }}</option>
-                    <option value="4">{{ i18n.__('ALERT') }}</option>
+                    <option value="4">{{ i18n.__('Alert') }}</option>
                   </select>
 
                   <span class="form-control-feedback glyphicon terrama2-combobox-feedback" ng-show="serviceForm.type.$dirty" ng-class="{'glyphicon-ok': serviceForm.type.$valid, 'glyphicon-remove': serviceForm.type.$invalid }"></span>
