--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -140,8 +140,8 @@
               </div>
             </div>
             <hr/>
-            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary pull-right" ng-click="extra.export(element)">Export</button>
+            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">{{ i18n.__("Close") }}</button>
+            <button type="button" class="btn btn-primary pull-right" ng-click="extra.export(element)">{{ i18n.__("Export") }}</button>
             <div style="clear: both;"></div>
           </div>
         </div>
@@ -186,6 +186,13 @@
             <label>{{ i18n.__("Select the View Service to be Used") }}:</label>
             <select class="form-control" name="servicesView" ng-model="selectedServices.View">
               <option ng-repeat="service in services.VIEW" ng-init="selectedServices.View = services.VIEW[0].id.toString()" value="{{ service.id }}">{{ service.name }}</option>
+            </select>
+          </div>
+          <hr ng-show="model.length > 0 && hasAlert && services.ALERT.length > 0"/>
+          <div class="form-group" ng-show="model.length > 0 && hasAlert && services.ALERT.length > 0">
+            <label>{{ i18n.__("Select the Alert Service to be Used") }}:</label>
+            <select class="form-control" name="servicesAlert" ng-model="selectedServices.Alert">
+              <option ng-repeat="service in services.ALERT" ng-init="selectedServices.Alert = services.ALERT[0].id.toString()" value="{{ service.id }}">{{ service.name }}</option>
             </select>
           </div>
           <hr/>
