--- a/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
+++ b/webapp/public/javascripts/angular/schema-form-plugin/mask-warn/templates/terrama2-mask-field.html
@@ -16,6 +16,6 @@
     <span style="top: 25px; margin-right: 20px !important" class="form-control-feedback" ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }" aria-hidden="true"></span>
     <span id="{{form.key.slice(-1)[0] + 'Status'}}" class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
     <span class="help-block" ng-if="hasError() && errorMessage(schemaError())">{{ errorMessage(schemaError())}}</span>
-    <span class="warn-message" ng-if="showMessage && !hasError()">Files can be overwritten</span>
+    <span class="warn-message" ng-if="showMessage && !hasError()">{{ i18n.__('Files can be overwritten') }}</span>
 
 </div>
