--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -288,8 +288,8 @@
           </div>
           <div class="form-group" terrama2-show-errors>
             <select class="form-control" name="reportTypes" ng-model="ctrl.alert.notifications[0].include_report" ng-show="ctrl.includeReport"  ng-required="ctrl.includeReport">
-              <option value="pdf">PDF</option>
-              <option value="txt">TXT</option>
+              <option value="PDF">PDF</option>
+              <option value="TXT">TXT</option>
             </select>
             <span class="help-block"
                   ng-show="forms.notificationForm.reportTypes.$dirty && forms.notificationForm.reportTypes.$invalid"
