--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -241,7 +241,7 @@
   <!-- jQuery DataTables -->
   <script src="/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
   <!-- Angular JS -->
-  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
   <!-- Internationalization -->
   <script src="/bower_components/i18n-node-angular/i18n-node-angular.js"></script>
   <!-- Socket.io -->
